Tomas comments to reply letter

--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -47,12 +47,19 @@
 
 	\end{refquote}
 
-	\textbf{R:} We appreciate the thoughtful feedback by the four referees. We take particular note of the comments regarding the structure and grounding of our introduction and have worked to address this. Reviewer 2's comments take a different view of the purpose and scope of the manuscript than the other reviewers; we respect their ideas but feel that some are beyond the scope of the present manuscript. In particular, we do not feel that a full simulation study is necessary given the simplicity of our framework. We emphasize that we are not introducing a software package (although we do provide simple code to aid those who are new to the field), nor are we introducing an entirely new framework (as the other Reviewers point out, many components of our approach have been touched on by previous work). The novelty and impact of our work lies in connecting a Bayesian statistical approach to the problem of limited and uneven sampling (driven by difference in species abundances, detectabilities, constrained time and budgets, etc.) and, we hope, in making this method more accessible to those without extensive statistical or modelling experience. Because of the difference between Reviewer 2 and the other Reviewers, we have opted to prioritise the majority view and focused first on comments by Reviewers 1, 3, and 4. We hope that, in the course of these revisions, we have at least partially addressed Reviewer 2's concerns as well. 
-	\smallskip
-	We have taken Reviewer 1's suggestion that we expand upon the different types of priors available and reasons for choosing one over the other. We also now offer a brief discussion about concerns over the subjectivity of prior selection. We argue that a great deal of subjectivity is baked into the compilation of empirical networks and that a Bayesian approach can be seen as making this subjectivity explicit. We hope that this will encourage empiricists to explicitly use their system-specific knowledge to create reasonable priors, as likely already occurs subconsciously (as in the designation of "forbidden links"). We hope that our revision more clearly frames the importance of uncertainty in ecological networks and positions a simple Bayesian approach as a partial solution (together with high-quality sampling, of course). 
-	\smallskip
+	\textbf{R:} We appreciate the thoughtful feedback by the four referees. We take particular note of the comments regarding the structure and grounding of our introduction and have worked to address them. 
+
+
+	Reviewer 2 takes a different view of the purpose and scope of the manuscript from that of the other reviewers. We respect his/her ideas but feel that some are beyond the scope of the present manuscript. In particular, we do not feel that a full simulation study is necessary given the simplicity of our framework. We emphasize that we are not introducing a software package (although we do provide simple code to aid those who are new to the field), nor are we introducing an entirely new framework (as the other Reviewers point out, many components of our approach have been touched on by previous work). Thus, the novelty and impact of our work explicitly lies in connecting a Bayesian statistical approach to the problem of limited and uneven sampling of networks (driven by difference in species abundances, detectabilities, constrained time and budgets, etc.) and, we hope, in making this method more accessible to those without extensive statistical or modelling experience. Please note that Reviewer 3 identified this need explicitly. 
+	% Tomas has a line break here, I'm not sure.
+	Because of the difference between Reviewer 2 and the other Reviewers, we have opted to prioritise the majority view and focused first on comments by Reviewers 1, 3, and 4. However, we hope and trust that, in the course of these revisions, we have at least partially addressed Reviewer 2's concerns as well. 
+
+
+	As a key point of departure for our revision, we have taken Reviewer 1's suggestion that we expand upon the different types of priors available and reasons for choosing one over the other. We also now offer a brief discussion about concerns over the subjectivity of prior selection. We argue that a great deal of subjectivity is baked into the compilation of empirical networks and that a Bayesian approach can be seen as making this subjectivity explicit. We hope that this will encourage empiricists to explicitly use their system-specific knowledge to create reasonable priors, as likely already occurs subconsciously (as in the designation of "forbidden links"). 
+
+
+	Overall, we hope that our revision more clearly frames the importance of uncertainty in ecological networks and positions a simple Bayesian approach as a partial solution (together with high-quality sampling, of course). 
 	We have also added many references to prior work. While the present study is not intended to be a full review of the literature, we certainly do not wish to downplay other workers in the area.
-	\smallskip
 	Finally, several of the Reviewers appeared to believe that we were advocating for reduced sampling effort. That is emphatically not the case (we find the idea absurd), and we have revised the manuscript to be clearer about the fact that increased sampling effort can reduce some sources of uncertainty. We hope that it is now clear that the Bayesian framework we promote is a complement to high sampling effort.
 
 
@@ -63,7 +70,7 @@
 
 % ----------------------------------------------------------------------
 % ----------------------------------------------------------------------
-{\Large \bf Reply to Reviewer \#1} [[done]]
+{\Large \bf Reply to Reviewer \#1}
 % ---------------------------------------
 
 	1. Suggestion to refocus on prior selection [[done]]
