integrating Tomas' comments to reply

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -130,14 +130,14 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     First and foremost, ecological communities are known to be stochastic~\citep{Gotelli2000}. Community composition and abundances vary over space~\citep{Baiser2012} and time~\citep{Olesen2011a}, leading to variation in encounter probabilites and hence in interactions~\citep{Vazquez2005,Poisot2015,Graham2018}. Species must co-occur in order to be observed interacting, so any variation in co-occurrence will create variation in the set of observed interactions~\citep{Gravel2013,Graham2018}. Even assuming constant co-occurrence within a given study system, changing abundances can affect interactions if species which would otherwise interact become too rare to detect each other~\citep{Tylianakis2010,Jordano2016}. Moreover, interactions vary over space~\citep{Kitching1987,Baiser2012,Emer2018}, time~\citep{Kitching1987,Olesen2011a,Lopez2017}, between individuals~\citep{Pires2011a,Wells2013,Fodrie2015,Novak2015}, throughout life cycles~\citep{Preston2014,Clegg2018}, and with environmental conditions~\citep{Poisot2015}.
 
 
-    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007,Jordano2016}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Such models provide an important ''reality check'' by allowing us to test hypotheses about the factors structuring ecological networks~\citep{Bartomeus2013,Weinstein2017.Weinstein2017a,Graham2018}. They can also allow us to estimate the numbers of interactions which have not been observed~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
+    Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007,Jordano2016}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Such models provide an important ''reality check'' by allowing us to test hypotheses about the factors structuring ecological networks~\citep{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}. They can also allow us to estimate the numbers of interactions which have not been observed~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
 
 
     [[These two paragraphs try to frame our study more clearly]]
-    To date, models incorporating uncertainty have either been very general (e.g.,~\citet{Guimera2009,Gravel2013}) or very system-specific (e.g.,~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}); in either case one of these models may be a poor fit for a particular study system. Moreover, some of the system-specific models described above cannot accommodate species observed only once~\citep{Bartomeus2013,Weinstein2017}. As rare species are likely to be observed less frequently~\citep{Bluthgen2010} and may be of particular interest (e.g., when modelling species loss), there is a need for a more widely-applicable framework that includes such rare species. 
+    To date, models incorporating uncertainty have either been very general (e.g.,~\citet{Guimera2009,Gravel2013}) or very system-specific (e.g.,~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}); in either case one of these models may be a poor fit for a particular study system. Moreover, some of the system-specific models described above cannot accommodate species observed only once~\citep{Bartomeus2013,Weinstein2017}. As rare species are likely to be observed less frequently~\citep{Bluthgen2006} and may be of particular interest (e.g., when modelling species loss), there is a need for a more widely-applicable framework that includes such rare species. 
 
 
-    Here we introduce a simple Bayesian framework that can easily be adapted to different systems. First, we provide a brief description of the nested levels of uncertainty affecting ecological network construction. In the context of this uncertainty, which can be reduced but not eliminated by high-quality sampling (\citealp[see Box 1]{Bartomes2013}), we present our Bayesian framework for combining observed data with a prior expectation of network structure. We conclude with a worked example applying this framework to an intensively-sampled host-parasitoid network. We find that even the highest-quality empirical network we could find had substantial uncertainty about whether many pairs of species interact, demonstrating the need to include information about this uncertainty in published networks. We also show that this interaction-level uncertainty leads to uncertainty about estimates of network structure, with important implications for comparisons across networks; especially those compiled with different sampling intensity~\citep{Weinstein2017}.
+    Here we introduce a simple Bayesian framework that can easily be adapted to different systems. First, we provide a brief description of the nested levels of uncertainty affecting ecological network construction. In the context of this uncertainty, which can be reduced but not eliminated by high-quality sampling (\citealp[see Box 1]{Bartomeus2013}), we present our Bayesian framework for combining observed data with a prior expectation of network structure. We conclude with a worked example applying this framework to an intensively-sampled host-parasitoid network. We find that even the highest-quality empirical network we could find had substantial uncertainty about whether many pairs of species interact, demonstrating the need to include information about this uncertainty in published networks. We also show that this interaction-level uncertainty leads to uncertainty about estimates of network structure, with important implications for comparisons across networks; especially those compiled with different sampling intensity~\citep{Weinstein2017}.
 
 
     % Development of molecular sampling methods such as DNA barcoding hold great potential for uncovering interactions missed by other sampling methods (such as visit surveys)~\citep{Giron2018}, but these novel methods are also somewhat error-prone at present~\citep{}. 
@@ -186,7 +186,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
           \textbf{Forbidden links}
 
-            Both whether species can interact and whether they do interact at a particular place and time have been discussed in the context of "forbidden links"~\citep{Jordano2016}. In this framework, all links which are prevented by spatio-temporal uncoupling~\citep{Jordano1987}, physiological constraints~\citep{Jordano1987,More2012}, etc. are considered "structural zeros" that cannot be observed~\citep{Jordano2016}. We conceptually distinguish between physiological constraints and spatio-temporal uncoupling to allow for cases in which a species is introduced to a new habitat, expands its range, or shifts phenology~\citep{Gravel2013}. In such cases, links which are forbidden due to physiological constraints remain forbidden but links previously forbidden due to spatio-temporal mismatch could potentially occur. 
+            Both whether species can interact and whether they do interact at a particular place and time have been discussed in the context of "forbidden links"~\citep{Jordano2016}. In this framework, all links which are prevented by spatio-temporal uncoupling, physiological constraints, etc. are considered "structural zeros" that cannot be observed~\citep{Jordano1987,Jordano2016}. We conceptually distinguish between physiological constraints and spatio-temporal uncoupling to allow for cases in which a species is introduced to a new habitat, expands its range, or shifts phenology~\citep{Gravel2013}. In such cases, links which are forbidden due to physiological constraints remain forbidden but links previously forbidden due to spatio-temporal mismatch could potentially occur. 
 
 
         \subsubsection*{Did we observe all interactions that occurred?} 
@@ -194,7 +194,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
           Lastly, measurement errors are a pervasive source of uncertainty in the observation of ecological processes. Even if an interaction is feasible and occurs during sampling ($L = 1$ and $X = 1$), we may still fail to detect it~\citep{Jordano2016,Weinstein2017}. We may define the probability of detecting of an interaction, $D$, given the interaction is feasible and occurs, as a stochastic process with the associated probability $P(D|X=1,L=1)=\delta$. Detection failure could happen for many reasons (see~\citet{Wirta2014} for examples and partial solutions to them). Some sources of detection error can be minimised with appropriate sampling effort (e.g., combining plant-focused and animal-focused sampling when assembling pollination networks~\citet{Jordano2016}), but other sources are often difficult to reduce. For example, cryptic species might require molecular analysis for appropriate taxonomic identification~\citep{Wirta2014,Frost2016} or it may not be possible to sample some species due to conservation concerns~\citep{Lagrue2015}. 
 
 
-          Some types of interactions will have higher detection uncertainty than others. Pollination, for example, occurs briefly and does not leave long-lasting evidence, while parasitism can be a lifelong association between species. Even long-term interactions can be missed, however, especially if species are difficult to identify or if not all individuals of a species share the interaction~\citep{Wells2013,Cirtwill2016}. Parasites, for example, are often concentrated in only a few individuals~\citep{Lagrue2017}. If these infected individuals do not happen to be included in a sample, their interactions will be missed. Detection probabilities also vary widely between species, and potentially individuals within species, due to different abundances and behaviours~\citep{Wells2013,Weinstein2017}.
+          Some types of interactions will have higher detection uncertainty than others. Pollination, for example, occurs briefly and does not leave long-lasting evidence, while parasitism can be a lifelong association between species. Even long-term interactions can be missed, however, especially if species are difficult to identify or if not all individuals of a species share the interaction~\citep{Wells2013,Cirtwill2016}. Parasites, for example, are often concentrated in only a few individuals~\citep{Lagrue2015}. If these infected individuals do not happen to be included in a sample, their interactions will be missed. Detection probabilities also vary widely between species, and potentially individuals within species, due to different abundances and behaviours~\citep{Wells2013,Weinstein2017}.
 
 
     \subsection*{Can't we just sample more?}
@@ -304,7 +304,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         Note that, in this case, the prior distribution will be the same for all interaction probabilities. It is also possible to use other interaction probabilities. For example, species' degrees (numbers of interaction partners) in a similar network or networks could be normalised (divided by the number of potential interaction partners) and interpreted as an interaction probabilities (i.e., "empirical Bayes"~\citep{Spiegelhalter2000}). The distribution of these interaction probabilities can be used to inform a prior distribution as show in \emph{Appendix S3}. When using network summary statistics or degree distributions, it is important to consider whether the available information reflects what we truly believe about the network. Given the likelihood that most published networks are undersampled~\citep{Jordano2016}, it may be wise to include only the highest-quality networks available in a prior. Likewise, only the degree distribution for a similar system is likely to be a reasonable prior for a focal system. For example, if the system is a large network containing many plant species and insects from different families it is inappropriate to use a prior distribution drawn from a small network describing interactions between different genotypes of a single plant species and a set of closely-related insects (see \emph{Appendix S6} for a demonstration). The similarity of traits across genotypes within a species means that an insect which interacts with one genotype is likely to interact with many others. Trait differences between species mean that a species-species network will likely contain fewer interactions than a genotype-species network. Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
 
 
-        If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., "approximate Bayes"~\citet{Gelmanblog})~\citep{Casella1985,Spiegelhalter2000}. This approach is used in medical testing~\citep{Copas1972,Spiegelhalter2000} and disease modelling~\citep{Leyland2005,Brooks2015} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, this approach allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, empirical Bayes has been criticized for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We illustrate this approach in the following empirical example.
+        If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., "approximate Bayes"~\citet{Gelmanblog})~\citep{Casella1985,Spiegelhalter2000}. This approach is used in medical testing~\citep{Copas1972,Spiegelhalter2000} and disease modelling~\citep{Leyland2005,Brooks2015} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, this approach allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, approximate Bayes has been criticized for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We illustrate this approach in the following empirical example.
 
 
   \subsection*{An empirical example}
@@ -327,7 +327,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsubsection*{Scaling up to network metrics}
 
-      Researchers are often interested in measures of network structure rather than the network itself. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Thus, any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S1}). One way to avoid this situation is to calculate the properties of a suite of simulated networks~\citep{Vazquez2005,Guimera209}.
+      Researchers are often interested in measures of network structure rather than the network itself. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Thus, any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S1}). One way to avoid this situation is to calculate the properties of a suite of simulated networks~\citep{Vazquez2005,Guimera2009}.
 
 
       Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. Each of these webs is a prediction of the structure of the metaweb. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. This gives us an estimate for each property reflecting our uncertainty about $\lambda$.
@@ -420,7 +420,7 @@ All data used in this study have been independently published and are accessible
 
   \begin{figure}[h!]
     \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution depending upon the number of observed interactions $k$ and observed co-occurrances $n$. The maximum likelihood estimate (MLE) for $\lambda$ is $\lambda_{MLE}=\frac{k}{n}$. Note that $\lambda$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact.\\
-    Importantly, we can estimate the variance of $\lambda$ as well as the MLE; available methods include the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]).
+    Importantly, we can estimate the variance of $\lambda$ as well as the MLE; available methods include the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). The distribution of the MLE for $\lambda$ thus obtained is a key part of the Bayesian distribution for $\lambda$.
     Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high unless we have some other reason to believe that an interaction cannot occur (i.e., a strong prior).}
     \label{upper_limits}
     \begin{center}
