--- a/manuscript/manual_abbrev.bib
+++ b/manuscript/manual_abbrev.bib
@@ -6,6 +6,15 @@ pages={175--193},
 year={1906},
 title={Sur les fonctions convexes et les in{\'{e}}galit{\'{e}}s entre les valeurs moyennes},
 }
+@article{Giron2018,
+author={Giron, D and Dubreuil, G and Bennett, A and Dedeine, F and Dicke, M and Dyer, L and Erb, M and Harris, M and Huguet, E and Kaloshian, I and Kawakita, A and Lopez-Vaamonde, C and Palmer, T and Petanidou, T and Poulsen, M and Sall\'{e}, A and Simon, J and Terblanche, J and Thi\'{e}ry, D and Whiteman, N and Woods, H and Pincebourde, S},
+journal={Entomol Exp App},
+year={2018},
+volume={166},
+pages={319--343},
+doi={10.1111/eea.12679},
+title={Promises and challenges in insect-plant interactions},
+}
 @article{Morris2014,
 author={Morris, R. J. and Gripenberg, Sofia and Lewis, Owen T. and Roslin, Tomas},
 journal={Ecol Lett},
@@ -4807,7 +4816,7 @@ year = {2009}
 }
 @article{Rasmussen2013,
 abstract = {Most ecological networks are analysed as static structures, where all observed species and links are present simultaneously. However, this is over-simplified, because networks are temporally dynamical. We resolved an arctic, entire-season plant-flower visitor network into a temporal series of 1-day networks and compared the properties with its static equivalent based on data pooled over the entire season. Several properties differed. The nested link pattern in the static network was blurred in the dynamical version, because the characteristic long nestedness tail of flower-visitor specialists got stunted in the dynamical networks. This tail comprised a small food web of pollinators, parasitoids and hyper-parasitoids. The dynamical network had strong time delays in the transmission of direct and indirect effects among species. Twenty percent of all indirect links were impossible in the dynamical network. Consequently, properties and thus also robustness of ecological networks cannot be deduced from the static topology alone.},
-author = {Rasmussen, Claus and Dupont, Yoko L. and Mosbacher, Jesper B. and Trj{\o}elsgaard, Kristian and Olesen, Jens M.},
+author = {Rasmussen, Claus and Dupont, Yoko L. and Mosbacher, Jesper B. and Tr{\o}jelsgaard, Kristian and Olesen, Jens M.},
 doi = {10.1371/journal.pone.0081694},
 file = {:Users/alyci52/Library/Application Support/Mendeley Desktop/Downloaded/Rasmussen et al. - 2013 - Strong impact of temporal resolution on the structure of an ecological network.pdf:pdf},
 journal = {PLoS ONE},
@@ -5291,6 +5300,147 @@ title = {{Functional trait and phylogenetic tests of community assembly across s
 volume = {80},
 year = {2010}
 }
+@article{Jordano2016,
+year={2016},
+author={Jordano, P.},
+title={Sampling networks of ecological interactions},
+journal={Funct Ecol},
+volume={30},
+pages={1883--1893},
+doi={10.1111/1365-2435.12763}
+}
+@article{Emer2018,
+author={Emer, C and Galetti, M and Pizo, M. A. and Guimar{\~{a}}es, Paulo R. Jr. and Moraes, S and Piratelli, A and Jordano, P},
+year={2018},
+title={Species roles in plant–pollinator communities are conserved across native and alien ranges},
+volume={22},
+pages={841--852},
+doi={10.1111/ddi.12458},
+journal={Divers Distrib}
+}
+@article{Lopez2017,
+year={2017},
+author={Lopez, D and Camus, P and Valdivia, N and Estay, S},
+title={High temporal variability in the occurrence of consumer–resource interactions in ecological networks},
+journal={Oikos},
+volume={126},
+pages={1699--1707},
+doi={10.1111/oik.04285},
+}
+@article{Preston2014,
+year={2014},
+author={Preston, D. L. and Jacobs, A. Z. and Orlofske, S. A. and Johnson, P. T. J.},
+title={Complex life cycles in a pond food web: effects of life stage structure and parasites on network properties, trophic  positions and the fit of a probabilistic niche model},
+journal={Oecologia},
+volume={174},
+pages={953--965},
+doi={10.1007/s00442-013-2806-5},
+}
+@article{Clegg2018,
+year={2018},
+author={Clegg, T and Ali, M and Beckerman, A},
+title={The impact of intraspecific variation on food web structure},
+journal={Ecology},
+volume={99},
+pages={2712--2720},
+doi={10.1002/ecy.2523},
+}
+@article{Bartomeus2013,
+year={2013},
+author={Bartomeus, I},
+title={Understanding linkage rules in plant-pollinator networks by using hierarchical models that incorporate pollinator detectability and plant traits},
+journal={PLoS ONE},
+volume={8},
+pages={1-8},
+doi={10.1371/journal.pone.0069200},
+}
+@article{Weinstein2017a,
+year={2017},
+author={Weinstein, B and Graham C},
+title={Persistent bill and corolla matching despite shifting temporal resources in tropical hummingbird-plant interactions},
+journal={Ecol Lett},
+volume={20},
+pages={326--335},
+doi={10.1111/ele.12730},
+}
+@article{Carstensen2014,
+year={2014},
+author={Carstensen, D. W. and Sabatino, M. and Tr{\o}jelsgaard, K and Morellato, L. P. C.},
+title={Beta diversity of plant-pollinator networks and spatial turnover of pairwise interactions},
+journal={PLoS ONE},
+volume={9},
+pages={e112903},
+doi={10.1371/journal.pone.0112903},
+}
+@article{Spiegelhalter2000,
+year={2000},
+author={Spiegelhalter, D. J. and Myles, J. P. and Jones, D. R. and Abrams, K. R.},
+title={Bayesian methods in health technology assessment: a review},
+journal={Health Technol Assess},
+volume={4},
+doi={10.3310/hta4380},
+}
+@article{Leyland2005,
+year={2005},
+author={Leyland, A and Davies, C},
+title={},
+journal={},
+volume={},
+pages={},
+doi={},
+}
+@article{Berger2006,
+year={2006},
+author={Berger, J},
+title={}, 
+
+journal={},
+volume={},
+pages={},
+doi={},
+}
+@misc{Gelmanblog,
+year={2016},
+author={Gelman, Andrew},
+title={Data-dependent prior as an approximation to hierarchical model},
+howpublished={\url{andrewgelman.com/2016/03/25/28321/}},
+note={Accessed: 2018-11-29}
+}
+@article{Casella1985,
+year={1985},
+author={Casella, G},
+title={},
+journal={},
+volume={},
+pages={},
+doi={},
+}
+@article{Copas1972,
+year={1972},
+author={Copas, J. B.},
+title={},
+journal={},
+volume={},
+pages={},
+doi={},
+}
+@article{Brooks2015,
+year={2015},
+author={Brooks, L and Farrow, D and Hyun, S and Tibshirani, R and Rosenfeld, R},
+title={Flexible modeling of epidemics with an empirical Bayes framework},
+journal={PLoS Comput Biol},
+volume={11},
+pages={e1004382},
+doi={10.1371/journal.pcbi.1004382},
+}
+@article{Graham2018,
+title={Towards a predictive model of species interaction beta diversity},
+year={2018},
+author={Graham, Catherine H. and Weinstein, Ben G.},
+journal={Ecol Lett},
+volume={21},
+pages={1299--1310},
+doi={10.1111/ele.13084},}
 @article{Jordano2003c,
 abstract = {Plant-animal mutualistic networks are interaction webs consisting of two sets of entities, plant and animal species, whose evolutionary dynamics are deeply influenced by the outcomes of the interactions, yielding a diverse array of coevolutionary processes. These networks are two-mode networks sharing many common properties with others such as food webs, social, and abiotic networks. Here we describe generalized patterns in the topology of 29 plant-pollinator and 24 plant-frugivore networks in natural communities. Scale-free properties have been described for a number of biological, social, and abiotic networks; in contrast, most of the plant-animal mutualistic networks (65.6{\%}) show species connectivity distributions (number of links per species) with a power-law regime but decaying as a marked cut-off, i.e. truncated power-law or broad-scale networks and few (22.2{\%}) show scale-invariance. We hypothesize that plant-animal mutualistic networks follow a build-up process similar to complex abiotic nets, based on the preferential attachment of species. However, constraints in the addition of links such as morphological mismatching or phenological uncoupling between mutualistic partners, restrict the number of interactions established, causing deviations from scale-invariance. This reveals generalized topological patterns characteristic of self-organized complex systems. Relative to scale-invariant networks, such constraints may confer higher robustness to the loss of keystone species that are the backbone of these webs.},
 author = {Jordano, Pedro and Bascompte, Jordi and Olesen, Jens M.},
