--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -72,56 +72,60 @@
 % ----------------------------------------------------------------------
 {\Large \bf Reply to Reviewer \#1}
 % ---------------------------------------
+Preamble.
 
-	1. Suggestion to refocus on prior selection [[done]]
+	1. Suggestion to refocus on prior selection
 
 		\begin{refquote}
 			Below I offer my thoughts on this well-written manuscript. Normally I condense my review into a few key points, but I found myself uncharacteristically divided with the paper as presented. At first, the introduction covers ground very well-trod by prior works and doesn’t really address its contribution. I was mostly frustrated by the rehashing of topics made by many previous papers, include many by the authors themselves. But then the paper seems to morph and pick up steam on L248. Rather than reaching towards an amorphous and grandiose “quantitative framework”, the authors briefly zoom into a very concise, and hugely important, question of choosing prior distributions for harnessing information among networks. This has been completely unexplored and merits attention. In ecology more broadly, priors are treated with timidity, as if we couldn’t dare to leverage past work on our current understanding. Personally, I have always felt limited by this standard. I applaud the authors for taking on this challenge, and I would like to see an introduction that merits and debates this question in much more detail. When should we use prior information? How do we go about constructing informed priors for networks? When can we use priors from the data in question? This is sometimes called approximate bayes (http://andrewgelman.com/2016/03/25/28321/), or empirical bayes, perhaps alluded to in the title, but not fully explained in the introduction. Should empirical priors be drawn from hyperpriors or fixed for each interaction? Can we combine qualitative information and quantitative information? This is all exciting ground that will open up new avenues for networks. Walking the reader through flat priors, informed priors and empirical priors is crucial for the importance of analysis to be understood by the reader. The use of empirical priors can be quite controversial, and should be atleast touched on in the discussion. \\
 			I’ve left my comments below on the introduction, but in my opinion, it should be almost wholly rewritten in favor of a more targeted question constructing networks using priors, which is the key novelty of the work and is mostly hidden by the current introduction. I’m not convinced any new analysis needs to be done, which speaks to the conflict between the current introduction and the actual data presented. I see the makings of a really nice paper here, and I’m confident the authors will be able to achieve this text revision.
-			\medskip
+
+
 			At the same time, the paper is clear and very readable. I wholly support the method and I think it is something critical that needs to be adopted by the community. \\
 			Having read the paper several times, I think that the authors are trying to cast their net too widely, even starting from the title. From that perspective, they don’t meet the expectation of new insight. However!! I was extremely interested in the brief discussion on using prior knowledge, especially the delicacy of trying to transfer information among networks (L248). My recommendation is to drastically reduce the grandiose attempt at a “quantitative framework for networks” (L1 – L246) and really zoom in on the contribution of transferring information among networks through informed priors.	Again L278, this is very well covered in concept by recent papers in MEE that include the authors of this work, as well as several by Weinstein, Bartomeus and others.
 			\end{refquote}
 
 
-		\textbf{R:} We thank the Reviewer for the suggestion to expand our discussion of prior selection, particularly with regard to approxmimate/empirical Bayes. Although we are somewhat space-limited, we have expanded our description of different priors available and why a researcher might choose one over another (lines XX-XX). We also touch upon the controversy over using empirical priors (lines XX-XX) although we were unable to find many references addressing this in detail. If the Reviewer has particular works in mind, we would be more than happy to include them. We hope that this expanded description will be a better guide for empiricists who may not be familiar with Bayesian statistics.
-		\medskip
-		We also appreciate the Reviewer's comments on our introduction. We feel that understanding the problem of uncertain detection of interactions is important motivation for a reader not already familiar with Bayesian procedures to wade through a larger discussion on priors. Therefore we have revised and, hopefully, streamlined our discussion but do not jump straight in to priors. We have, however, taken care to introduce our analysis as a worked example (lines XX-XX) and hope that this helps to reduce the conflict between the introduction and our data. 
-		\medskip
-		We thank the Reviewer for their compliments and accept their suggestion that we are somewhat overexcited about our approach. We have refined the introduction to be more specific about the problem we are attempting to solve. We have also expanded our treatment of prior selection and hope that our paper now reads as achieving its goal.
+		\textbf{R:} We thank the Reviewer for his/her positive evaluation, and have done our utmost to reframe and tighten the introduction and framing of the paper. In doing so, we have happily adopted the suggestion to expand our discussion of prior selection, particularly with regard to approximate/empirical Bayes. Although we are somewhat space-limited, we have expanded our description of the different priors available and why a researcher might choose one over another (section beginning with line 245). We also touch upon the controversy over using empirical priors (lines 340-345) although we were unable to find many references addressing this in detail. We hope that this expanded description will be a better guide for empiricists who may not be familiar with Bayesian statistics.
 
 
-	2. Suggestion to add more literature [[done]]
+		In implementing the Reviewer's comments on our introduction, we believe that most readers who are less familiar with Bayesian procedures will need a quick outline of the problem of uncertain detection of interactions in order to be motivated to dive into the larger discussion of priors. We stress that our intended target audience is empirical ecologists working on network description who likely have a different skillset than that of the Reviewer. We also note that Reviewer 2 found that \emph{``The introduction is particularly pleasant to read and the problem is well stated"}, praise which we would hate to loose. Therefore we have revised and streamlined our introduction but still refrain from jumping straight into prior selection. We have, however, taken care to introduce our analysis as a worked example (lines 347) and hope that this helps to reduce the conflict between the introduction and our data. 
+
+
+		Overall, we thank the Reviewer for their compliments and accept their suggestion that we are somewhat overexcited about our approach. Thus, we have refined the introduction to be more specific about the problem we are attempting to solve. We have also expanded our treatment of prior selection and hope that our paper now reads as achieving its goal.
+
+
+	2. Suggestion to add more literature
 
 		\begin{refquote}
 		The introduction flows well and is thoughtfully laid out. Given the enormous amount of literature in the field, it is not possible to provide a full set of citations. However, it seems remiss to not consider Jordano (2016) in the sampling section.
 		\end{refquote}
 
-		\textbf{R:} We thank the Reviewer for their compliments to our introduction and for the literature recommendations. We have incorporated these reference as suggested. Following comments from other reviewers, we have refined and slightly restructured our introduction in the hope of more clearly establishing the goal of our manuscript ('narrowing our net'). We hope that this revised introduction will also meet with the Reviewer's approval. 
+		\textbf{R:} We thank the Reviewer for their compliments to our introduction and for the literature recommendations. We have incorporated these references as suggested (including Jordano, 2016 in the sampling section). Following comments from other reviewers, we have refined and slightly restructured our introduction in the hope of more clearly establishing the goal of our manuscript. We hope that this revised introduction will also meet with the Reviewer's approval. 
 
 
-	3. Suggestion to de-emphasize MLE estimate and get straight to Bayes [[done]]
+	3. Suggestion to de-emphasize MLE estimate and get straight to Bayes
 
 		\begin{refquote}
 		It’s a bit confusing to lead the reader towards a Bayesian analysis, and then immediately start with the MLE estimate. Why is this needed at all? (L162-186). Just start at 187?
 		\end{refquote}
 
-		\textbf{R:} The MLE estimate is part of the Bayesian framework as it dictates the shape of the distribution we use. We now introduce the MLE formally within this context (lines XX-XX) and take care to be explicit when using it to explore the sample size needed in the absence of prior knowledge later (lines XX-XX).
+		\textbf{R:} The MLE estimate is part of the Bayesian framework as it dictates the shape of the distribution that we use. We now introduce the MLE formally within this context (lines 229-231) and take care to be explicit when using it to explore the sample size needed in the absence of prior knowledge later (caption of Figure 3).
 
-		Lines XX-XX:
+		Lines 229-231:
 
 		\begin{quotation}
 			The basis of a Bayesian approach to modelling the probability that an interaction occurs ($\lambda$) is combining the maximum likelihood estimate (MLE) of $\lambda$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda$ can be modelled as a Bernoulli trial based on the number of observed interactions $k$ and observed co-occurrances $n$: $\lambda = \frac{k}{n}$. The most appropriate prior distribution for a probability such as $\lambda$ is the beta distribution:
 		\end{quotation}
 
-		Lines XX-XX:
+		Caption of figure 3:
 
 		\begin{quotation}
-			The number of observed co-occurrences needed to believe that an unobserved interaction cannot occur is very high (about 35; Fig.~\ref{upper_limits}), and most datasets will not include this level of sampling for all pairs of species~\citep{Bartomeus2013}.
+			The number of observed co-occurrences needed to believe that an unobserved interaction cannot occur is very high (about 35; Fig. 3), and most datasets will not include this level of sampling for all pairs of species~\citep{Bartomeus2013}.
 		\end{quotation}
 
 
-	4. Suggestion to remove moments of the beta distribution [[done]]
+	4. Suggestion to remove moments of the beta distribution
 
 		\begin{refquote}
 		I think a bit of space is wasted on defining the moments of the beta distribution. This is very googleable, and almost too thorough. I think the space is better utilized aligning the ecological challenge and the quantitative method.
@@ -130,7 +134,7 @@
 		\textbf{R:} While we feel that a short introduction to the beta distribution is important to bring researchers new to Bayesian statistics up to speed (and give them some keywords to Google), we accept the Reviewer's suggestion to reduce the amount of space given to the beta. We have therefore moved the description of basic properties to Appendix S2. The remaining paragraph introducing the beta distribution now leads directly into the section describing prior selection.
 
 
-	5. Novelty of the study not clear in current framing [[done]]
+	5. Novelty of the study not clear in current framing
 
 		\begin{refquote}
 		I’m wrestling with the novelty of the work as presented and whether it reaches the standard for publication at MEE. Certainly, much of this logic is laid out in other works. The authors are well aware of this and have made significant contributions to this topic in the last few years. In particular, the authors should try to be much more explicit about the contribution they hope to offer that hasn’t been covered. ...
@@ -141,7 +145,7 @@
 		\textbf{R:} We thank the Reviewer for the literature suggestions and now include them in our introduction and/or discussion. We emphasize the board applicability of our approach across network types and systems with varying degrees of prior knowledge. We also emphasize that our approach is not restricted to species observed X times (as many predictive models are) and can include species not yet observed at a site (e.g., potential invaders). We hope that the contribution our manuscript makes is now clearer.
 
 
-	6. Potential contradiction [[done]]
+	6. Potential contradiction 
 
 		\begin{refquote}
 		L89 for example, seems to conflict with the two paragraphs immediately following it?
@@ -161,21 +165,39 @@
 		% Wells, K., & O’Hara, R. B. (2013). Species interactions: Estimating per-individual interaction strength and covariates before simplifying data into per-species ecological networks. Methods in Ecology and Evolution, 4(1), 1–8. doi:10.1111/j.2041-210x.2012.00249.x
 
 
+\clearpage
+
+
 % ----------------------------------------------------------------------
 % ---------------------------------------------------------------------
-{\Large \bf Reply to Referee \#2} [[not started]]
+{\Large \bf Reply to Reviewer \#2} [[not started]]
 % ---------------------------------------
 
-	I do not know what to do with this.
+	The Reviewer stated that our manuscript ``tackles a very interesting problem, quantifying the uncertainity of interactions" which he/she rates as ``one of the hottest topics in the field". He/she also points out that ``the introduction is particularly pleasant to read" and that we framed the problem well. The Reviewer also pointed out a number of weaknesses to the manuscript that we respond to one-by-one. In general, we feel that the Reviewer's comments reflect a high degree of statistical expertise; expertise that we do not expect to be shared by the bulk of our intended audience (empirical ecologists assembing new ecological networks). We have therefore prioritised comments by this and the other Reviewers that seemed most likely to improve the manuscript for readers who are relatively new to Bayesian analysis over concerns most relevant to a highly knowledgeable reader. We hope that our revised manuscript makes this target audience clearer, and that we have addressed the Reviewer's key concerns with our revision.
 
-	\begin{refquote}
-	The paper by A.Cirtwill and colleagues tackles a very interesting problem, quantifying the uncertainity of interactions, using three levels of nested uncertainity. The authors proposed a bayesian framework to obtain estimate of the parameters of the model and show the results of their approach on a recent dataset. The question of disentangling the true presence/absence of an interaction given a series of observations (replicates) is of primary interest and, seen in this light, the paper is tackling one of the hottest topics in the field.
 
-	The introduction is particularly pleasant to read and the problematic is well stated. However, the paper has also a number of weaknesses that I enumerate in the following :
+	1. Lack of references [done]
 
-	1/ lack of references: the fundamental question about predicting interactions given some incertainity has been and is debated in many papers (see the seminal paper by Roger Guimerà and Marta Sales-Pardo, PNAS, 2009). Even if the proposed framework is probably not stated in its exact terms in the literature, bridges between existing approaches (beyond Ecology) and the one in the paper would be very welcomed. An appropriate discussion between points of convergence and difference would help the reader to appreciate the significance and the impact of the proposed methodology.
+		\begin{refquote}
+			
+			The fundamental question about predicting interactions given some incertainity has been and is debated in many papers (see the seminal paper by Roger Guimer\`{a} and Marta Sales-Pardo, PNAS, 2009). Even if the proposed framework is probably not stated in its exact terms in the literature, bridges between existing approaches (beyond Ecology) and the one in the paper would be very welcomed. An appropriate discussion between points of convergence and difference would help the reader to appreciate the significance and the impact of the proposed methodology.
+		
+		\end{refquote}
 
-	2/ network oversight: the approach considers that the interactions are independent, which is not the case in real data. Indeed, the paper is supposed to be “network-oriented“ but the methodology deals with independent interactions (e.g. the variables L,T,X and D introduced lines 62,77,101 are for instance not indexed by ij which could have suggested that the interactions were seen as a whole). Consequently, the mathematical framework remains quite simple and may not reflect nor model the processes governing the actual detection of interactions. Despite of this drawback, the proposed method is interesting but at least the authors should add some discussion on the limits of dealing with independent interactions,
+
+		\textbf{R:} This comment echoes the impression of Reviewers 1 (above) and 3 (below) that we do not give adequate attention to previous work. As stated above, we have now added many further pointers to previous work, and also been much more explicit regarding whom we try to reach with what message in the current paper.
+
+
+	2. Non-independence of interactions not accounted for [written, not done]
+
+		\begin{refquote}
+			2/ network oversight: the approach considers that the interactions are independent, which is not the case in real data. Indeed, the paper is supposed to be “network-oriented“ but the methodology deals with independent interactions (e.g. the variables L,T,X and D introduced lines 62,77,101 are for instance not indexed by ij which could have suggested that the interactions were seen as a whole). Consequently, the mathematical framework remains quite simple and may not reflect nor model the processes governing the actual detection of interactions. Despite of this drawback, the proposed method is interesting but at least the authors should add some discussion on the limits of dealing with independent interactions,
+		\end{refquote}
+
+
+		\textbf{R:} We agree wholeheartedly that ecological interactions are often not independent. Indeed, we refer several times to the effect of species' abundances on their probabilities of interacting. This effect alone will introduce non-independence in interaction probabilities, as all interactions involving a common species will be more likely than they would be if that species was rare. That said, we also agree that we do not explicitly discuss the non-independence of interactions. In part, this is by design. We explicitly want to keep our mathematical framework quite simple so that it is easily applicable to a wide variety of situations (including those where the nature of non-independence among interactions is not known). Nevertheless, to encourage readers to consider non-independence when designing their priors we are happy to take the Reviewer's suggestion and index our variables by ij and add a line noting that the assumption of independent interactions may not hold. 
+
+
 
 	3/ identifiability: the reader would appreciate that the authors discuss and prove the identifiability of the model. Indeed, the three levels of uncertainity are nested but one could wonder whether different parameters at the three levels can fit the same data with the same quality (i.e. no identifiability).  I would suggest this point to be addressed in a specific section.
 
@@ -362,7 +384,7 @@
 		\textbf{R:} We had written our first draft with the assumption that empirical ecologists are well aware that large sample sizes are important and that they should sample as much as possible. Given that, repeating the call to sample more seemed more likely to come across as patronizing than helpful. We did not anticipate that anyone would read the omission of such a call a statement that anyone should sample \emph{less}. In our revised manuscript, we collect our discussion of sampling into a dedicated section. We hope that this will make it clearer that sampling is very important but cannot completely eliminate uncertainty (except perhaps in some very species-poor and unusually static systems, but these are certainly rare). As to adding more zeros than ones specifically, this is only "bad" in the sense that it gives us more high-uncertainty cells in the interaction matrix. We take the view that it is better to have "known unknowns" than "unknown unknowns" and it is certainly better to know about more of the species in a community than fewer, but finding a single individual of a rare species will not reduce uncertainty in the web. We have added a line (XX-XX) specifically to address this.
 
 		\begin{quotation}
-			we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig.~\ref{histograms}C). While this improves our understanding of the set of species present in the community, it introduces yet more uncertainty into the interaction matrix. Note that it is better to identify the set of potential interactions than to miss a species, so sampling effort should not be reduced in order to exclude rare species.
+			we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig. 2C). While this improves our understanding of the set of species present in the community, it introduces yet more uncertainty into the interaction matrix. Note that it is better to identify the set of potential interactions than to miss a species, so sampling effort should not be reduced in order to exclude rare species.
 		\end{quotation}
 
 
@@ -515,7 +537,7 @@
 
 
 		\begin{quotation}
-			An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. Moreover, given an unobserved interaction in an empirical dataset, we often cannot determine why the interaction did not occur \emph{post hoc}. The detection of any interaction is a stochastic process subject to many levels of uncertainty. As a conceptual guide to the factors affecting this process, we describe three nested levels of uncertainty that roughly address the questions: "Could species $i$ and $j$ interact?", "Do they interact?" and "Do we observe the interaction?" (Fig.~\ref{conceptual_fig}). 
+			An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. Moreover, given an unobserved interaction in an empirical dataset, we often cannot determine why the interaction did not occur \emph{post hoc}. The detection of any interaction is a stochastic process subject to many levels of uncertainty. As a conceptual guide to the factors affecting this process, we describe three nested levels of uncertainty that roughly address the questions: "Could species $i$ and $j$ interact?", "Do they interact?" and "Do we observe the interaction?" (Fig. 1). 
 		\end{quotation}
 
 
@@ -660,5 +682,10 @@
 
 
 \clearpage
+
+    \bibliographystyle{ecol_let} 
+    \bibliography{manual_abbrev} % Abbreviate journal titles.
+
+
 
 \end{document}
